--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,11 +31,11 @@ jobs:
           - sqlite3
         ruby:
           - 3.1
-          - 3.2
-          - 3.3
+        # - 3.2
+        # - 3.3
         rails:
-          - rails_6_1
-          - rails_7_0
+        # - rails_6_1
+        # - rails_7_0
           - rails_7_1
 
     env:
